Added some class in HTML and styled banner

--- a/projects-codecademy/Dasmoto-s-arts-and-crafts/index.html
+++ b/projects-codecademy/Dasmoto-s-arts-and-crafts/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <section class="articles">
-            <h2>Brushes</h2>
+            <h2 class="brushes">Brushes</h2>
             <figure>
                 <img src="./assets/images/hacksaw.jpeg" alt="Hacksaw brushes">
             </figure>
@@ -22,7 +22,7 @@
             </article>
         </section>
         <section class="articles">
-            <h2>Frames</h2>
+            <h2 class="frames">Frames</h2>
             <figure>
                 <img src="./assets/images/frames.jpeg" alt="Collection of Frames">
             </figure>
@@ -32,7 +32,7 @@
             </article>
         </section>
         <section class="articles">
-            <h2>Paint</h2>
+            <h2 class="paint">Paint</h2>
             <figure>
                 <img src="./assets/images/finnish.jpeg" alt="Finnish bottle of paint and brushes">
             </figure>
